--- a/SA2025_assignment1.ipynb
+++ b/SA2025_assignment1.ipynb
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "id": "2kLDKA3bKGMD"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {
         "id": "XwzSYh42Kdej"
       },
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "YPqY3euIKoCk",
         "colab": {
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "ocVSOb3kKvQV",
         "colab": {
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "x9bxYl1nLCvE"
       },
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "Svgs2agDLYxt",
         "colab": {
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "igpYFRjLXLiZ"
       },
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "Jj4cUag7WZYB",
         "colab": {
@@ -380,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "WjOwyU89WlwR",
         "colab": {
@@ -416,11 +416,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "Qoy0rPpUW2lp"
+        "id": "Qoy0rPpUW2lp",
+        "outputId": "3321a83a-66f2-4c67-fab0-e16e6e2d37cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 115
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    usa\n",
+              "Name: origin, dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>origin</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>usa</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ],
       "source": [
         "#your code here\n",
         "ab = df[(df['horsepower'] > 100) & (df['weight'] < 3000)]\n",
@@ -438,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "ZsUW7kZzXeKR",
         "colab": {
@@ -474,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "TRy2Tb_GXqcp",
         "colab": {
@@ -522,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "BMLOKdEQdg_J",
         "colab": {
@@ -692,7 +740,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "e6XecJLkeUmK",
         "colab": {
@@ -753,7 +801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "wvcifD48dYsC",
         "colab": {
@@ -817,7 +865,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "M5pMhQOldiFC",
         "colab": {
